EM finished 1st cut of Restrictive Rules paper for APSA. \\ Analysis now includes co-partisan committee chairs. Sent to Ges and Valeria for reactions

--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -114,3 +114,161 @@ Un perfil de preferencia para ilustrar podria ser:
     \end{tikzpicture}  \\
 \caption{Stylization of the voting agenda. Notación: $p$ es un proyecto; $q$ el status quo; $p_1$, $p_2$ y $p_{12}$ son, respectivamente, enmiendas al primer artículo del proyecto, al segundo o a ambos. Vea el texto.}\label{f:agendaUrg}
 \end{sidewaysfigure}
+
+
+-----------------------------------
+
+
+Committee chair is from
+           pres  coal opp tot
+  1998        9     7   1  17
+  2002        6     7   4  17
+  2006        3    15   0  18
+  2010        5    11   6  22
+
+
+  
+\begin{table}
+\begin{center}
+\begin{tabular}{lrrrr}
+\mc{5}{l}{\emph{~~Part A. Committee chairs, C\'amara de Diputados}} \\
+Coalition             & 1998--2002 & 2002--06 & 2006--10 & 2010--14 \\ \hline
+President's party     &  53        & 35       & 17       & 23       \\
+Other coalition party &  41        & 41       & 83       & 50       \\
+Opposition            &   6        & 24       & ---      & 27        \\ \hdashline
+Total                 & 100        & 100      & 100      & 100      \\ 
+N standing committees &  17        &  17      &  18      & 22      \\ \hline
+\mc{5}{l}{\emph{~~Part B. Congressional seats}} \\
+Coalition   & 1998--2002    & 2002--06 & 2006--10 & 2010--14 \\ \hline
+\mc{5}{l}{\emph{~~Seats, C\'amara de Diputados}} \\
+President's & 58            & 53       & 51       & 50       \\
+Opposition  & 42            & 48       & 47       & 48       \\
+Regional    &               &          & 3        & 2        \\ \hdashline
+Total       & 100           & 100      & 100      & 100      \\ \hline
+\mc{5}{l}{\emph{~~Seats, Senate}} \\
+President's & 50            & 50       & 55       & 45       \\
+Opposition  & 50            & 50       & 45       & 55       \\ \hdashline
+Total       & $100^{\dagger}$ & 100      & 100      & 100      \\ \hline
+\mc{5}{r}{\footnotesize{$^\dagger$vacant seats dropped}}
+\end{tabular}
+% \begin{tabular}{lrrrrrr}
+% Coalition   & 1990--94 & 1994--98 & 1998--2002    & 2002--06 & 2006--10 & 2010--14 \\ \hline
+% \mc{7}{l}{\emph{~~C\'amara de Diputados}} \\
+% President's & 60       & 58       & 58            & 53       & 51       & 50       \\
+% Opposition  & 40       & 42       & 42            & 48       & 47       & 48       \\
+% Regional    &          &          &               &          & 3        & 2        \\ \hdashline
+% Total       & 100      & 100      & 100           & 100      & 100      & 100      \\ \hline
+% \mc{7}{l}{\emph{~~Senate}} \\
+% President's & 48       & 46       & 50            & 50       & 55       & 45       \\
+% Opposition  & 52       & 54       & 50            & 50       & 45       & 55       \\ \hdashline
+% Total       & $100^*$  & $100^*$  & $100^{*\dagger}$ & 100      & 100      & 100      \\ \hline
+% \mc{7}{l}{\footnotesize{Notes: $^*$ vacant seats dropped; $^\dagger$ margin varied above and below 50/50 due to vacancies.}}
+% \end{tabular}
+\caption{The president's status in Congress. Percent seats controlled by electoral lists in each chamber. The president's list in 1998--2010 was Concertaci\'on; it was Alianza afterwards. Regional list includes major-list splinters (from Christian Democrats and UDI). President's status in the Senate slightly and briefly oscilated above and below majority due to vacant seats. Source: prepared with information from \protect\url{www.camara.cl}.}\label{t:congressSeats}
+\end{center}
+\end{table}
+
+
+
+
+%% \begin{table}
+%% \begin{center}
+%% \begin{tabular}{lrrrr}
+%% List        & 1998--2002    & 2002--06 & 2006--10 & 2010--14 \\ \hline
+%% \mc{5}{l}{\emph{~~C\'amara de Diputados}} \\
+%% President's & 58            & 53       & 51       & 50       \\
+%% Opposition  & 42            & 48       & 47       & 48       \\
+%% Regional    &               &          & 3        & 2        \\ \hdashline
+%% Total       & 100           & 100      & 100      & 100      \\ \hline
+%% \mc{5}{l}{\emph{~~Senate}} \\
+%% President's & 50            & 50       & 55       & 45       \\
+%% Opposition  & 50            & 50       & 45       & 55       \\ \hdashline
+%% Total       & $100^{\dagger}$ & 100      & 100      & 100      \\ \hline
+%% \mc{5}{r}{\footnotesize{$^\dagger$vacant seats dropped}}
+%% \end{tabular}
+%% % \begin{tabular}{lrrrrrr}
+%% % Coalition   & 1990--94 & 1994--98 & 1998--2002    & 2002--06 & 2006--10 & 2010--14 \\ \hline
+%% % \mc{7}{l}{\emph{~~C\'amara de Diputados}} \\
+%% % President's & 60       & 58       & 58            & 53       & 51       & 50       \\
+%% % Opposition  & 40       & 42       & 42            & 48       & 47       & 48       \\
+%% % Regional    &          &          &               &          & 3        & 2        \\ \hdashline
+%% % Total       & 100      & 100      & 100           & 100      & 100      & 100      \\ \hline
+%% % \mc{7}{l}{\emph{~~Senate}} \\
+%% % President's & 48       & 46       & 50            & 50       & 55       & 45       \\
+%% % Opposition  & 52       & 54       & 50            & 50       & 45       & 55       \\ \hdashline
+%% % Total       & $100^*$  & $100^*$  & $100^{*\dagger}$ & 100      & 100      & 100      \\ \hline
+%% % \mc{7}{l}{\footnotesize{Notes: $^*$ vacant seats dropped; $^\dagger$ margin varied above and below 50/50 due to vacancies.}}
+%% % \end{tabular}
+%% \caption{The president's status in Congress. Percent seats controlled by electoral lists in each chamber. The president's list in 1998--2010 was Concertaci\'on; it was Alianza afterwards. Regional list includes major-list splinters (from Christian Democrats and UDI). President's status in the Senate slightly and briefly oscilated above and below majority due to vacant seats. Source: prepared with information from \protect\url{www.camara.cl}.}\label{t:congressSeats}
+%% \end{center}
+%% \end{table}
+
+%% The span offers variance in the size and status of the president's coalition in Congress. Given electoral list voting unity since the return to democracy \citep{carey.2002,aleman.saieg.coalUnityChile.2007}, the seats they control are a good indicator of the executive's legislative support. As Table \ref{t:congressSeats} reports, the president's coalition was always in control of the C\'amara, but has controlled Senate majorities between 2006 and 2010 only (coinciding with the first Bachelet administration). By requiring 67, 60, and 57 percent votes of each chamber, respectively, constitutional reform, constitution-interpreting legislation, and organic laws therefore always required votes across the aisle. 
+
+
+
+
+% Table created by stargazer v.5.2 by Marek Hlavac, Harvard University. E-mail: hlavac at fas.harvard.edu
+% Date and time: Tue, Jul 11, 2017 - 10:44:55 PM
+% Requires LaTeX packages: dcolumn 
+\begin{table}[!htbp] \centering 
+  \caption{Regression results} 
+  \label{} 
+\begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
+\\[-1.8ex]\hline 
+\hline \\[-1.8ex] 
+ & \multicolumn{4}{c}{\textit{Dependent variable:}} \\ 
+\cline{2-5} 
+\\[-1.8ex] & \multicolumn{4}{c}{dv12} \\ 
+\\[-1.8ex] & \multicolumn{3}{c}{\textit{logistic}} & \multicolumn{1}{c}{\textit{generalized linear}} \\ 
+ & \multicolumn{3}{c}{\textit{}} & \multicolumn{1}{c}{\textit{mixed-effects}} \\ 
+\\[-1.8ex] & \multicolumn{1}{c}{(1)} & \multicolumn{1}{c}{(2)} & \multicolumn{1}{c}{(3)} & \multicolumn{1}{c}{(4)}\\ 
+\hline \\[-1.8ex] 
+ Copartisan comm.~chair      &
+                             &
+ Multiple referrals          &
+                             &
+ Member bill                 &
+                             &
+ Member bill, opp.-sponsored &
+                             &
+ Member bill, mix.-sponsored &
+                             &
+ Member bill, pres. coal.-sp.&
+                             &
+ Hacienda referral           &
+                             &
+ Year remaining              &
+                             &
+ Pres.~approval              &
+                             &
+ Introduced Senate           &
+                             &
+ Senate majority             &
+                             &
+ Relax deadlines             &
+                             &
+ 2002-06 Leg.                &
+                             &
+ 2006-10 Leg.                &
+                             &
+ 2010-14 Leg.                &
+                             &
+ Constant                    &
+                             &
+\hline \\[-1.8ex] 
+Observations & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} & \multicolumn{1}{c}{6,987} \\ 
+Log Likelihood & \multicolumn{1}{c}{-1,718} & \multicolumn{1}{c}{-1,702} & \multicolumn{1}{c}{-1,688} & \multicolumn{1}{c}{-1,695} \\ 
+Akaike Inf. Crit. & \multicolumn{1}{c}{3,456.650} & \multicolumn{1}{c}{3,428.021} & \multicolumn{1}{c}{3,402.008} & \multicolumn{1}{c}{3,415.824} \\ 
+Bayesian Inf. Crit. &  &  &  & \multicolumn{1}{c}{3,504.898} \\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+\end{tabular} 
+\end{table} 
+> 
+
+
+Including the Finance committee in the `other committee' count increases multiple referrals to 32 percent of bills.
+
+ 
