EM: antes de que Ges y Vale empiecen a editar

--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -1,3 +1,52 @@
+%from  intro
+The urgency authority has received limited attention. \citet{siavelis.2002} is the only systematic study we are aware of. Analysis of Chile's first post-transition administration revealed the amazing frequency with which urgency messages were issued by President Aylwin: slightly more than one-third of proposals in Congress received some form of urgency, and about nine out of ten urgent bills were executive-initiated. Seeking whether or not urgent proposals had a more expedite legislative process and an improved likelihood of passage, the study found mixed evidence at best. Among executive proposals, urgent ones had somewhat shorter consideration than the rest (medians of 134 vs.\ 160 days, respectively). But no palpable difference in success rates could be appreciated (64 vs.\ 63 percent). 
+
+The little power of the signal may bear relation to selection bias. Strategic presidents are likely to target for urgency proposals that differ from the rest in important ways, so the set of bills receiving urgent status is not random. Right censoring may also be an obstacle. A more fundamental problem is institutional indeterminacy. \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress. %---unlike the Brazilian, Colombian, and Uruguayan variants.
+
+Subsequent research, reviewed in section 2, showed that distinguishing types of urgency messages by degree---key for our argument---recovers some of the evidence that Siavelis missed. 
+
+We offer an alternative interpretation of the urgency authority in Chile. The key is not how fast urgent proposals are considered, but the way they are considered in the floor. Restrictive rule. 
+
+
+% from section
+The urgency authority has received limited attention. \citet{siavelis.2002} is the only systematic study we are aware of. Analysis of Chile's first post-transition administration revealed the amazing frequency with which urgency messages were issued by President Aylwin: slightly more than one-third of proposals in Congress received some form of urgency, and about nine out of ten urgent bills were executive-initiated. He sought if urgent proposals had a more expedite legislative process and an improved likelihood of passage, finding mixed evidence at best. Among executive proposals, the urgent had somewhat shorter consideration than the rest (medians of 134 vs.\ 160 days, respectively). But no palpable difference in success rates could be appreciated (64 vs.\ 63 percent). 
+
+The negative finding may bear relation to selection bias. Strategic presidents are likely to target for urgency proposals that are markedly different from the rest in important ways, so the set of bills receiving urgent status is not random. A more fundamental problem is that, unlike the Brazilian, Colombian, and Uruguayan variants, the consequences of congressional inaction on an urgent bill are indeterminate in Chile. \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress. 
+
+We offer an alternative interpretation of the urgency authority in Chile. importa porque es forma de restrictive rule. 
+
+
+
+% from section
+
+
+
+
+
+
+% from old section
+The negative finding may bear relation to three elements. In their study of budgetary congressional oversight of the executive, \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress---the next section develops this argument. While this may explain the lack of effects, it begs the question of why the president resorted so frequently to an authority that seems inconsequential. In other words, why make so many empty threats?
+
+
+%% % longer review of aleman and navia
+\citeauthor{aleman.navia.UrgChi.2009}'s \citeyearpar{aleman.navia.UrgChi.2009} systematic study of executive success in Congress in three post-transition presidencies also inspects Chile's urgency authority. Among controls, their equation includes urgency authority usage in the right side. The unit is the individual bill, and the size of the executive agenda varies substantially over the years. Variation is quantitative  (Congress received about 150 presidential bills in each of the first 6 years after 1990, a numbrer that dropped to about 70 in the next 6 years, then climbed to about 100 in the final 4 years of their series) and qualitative, presidents manifesting different propensities to aim at constitutional reform. Of direct relevance are the findings on urgencies. Controlling for key policy domains, chamber of origin, seat margins, and presidential approval, and clustering errors by legislative year, different prioritization reveal quite different effects in passage. `Act now' and `2-week' notices significantly increased the probability of bill passage, but not `one month' notices. 
+
+Finally, selection bias is an obstacle to measure urgency authority effects. Presidents, behaving strategically, are likely to target for urgency proposals that are markedly different from the rest in important ways, so the set of bills receiveing urgent status is not random. Like the Siavelis and Alemán-Navia studies, we recognize the endogeneity problem that arises but does not confront it methodologically. Until a more subtle identification design is proposed, findings must be taken with a grain of salt. The systematic study of the urgency authority in Chile that follows should contribute to pave the way to a solution. 
+
+%% %If presidents, behaving strategically, were to target for urgency proposals that are markedly different from the rest in important ways, a problem of endogeneity arises. Classify proposals based on how difficult passage is expected: easy, hard, and impossible. If left on their own, the easy proposals would be approved faster, the hard slower, the impossible never. A strategic president should concentrate the urgency authority in the hard group, leaving easy proposals mostly on their own, while abandoning the hopeless group of impossible proposals, that will not be observed. As a consequence, comparing
+
+%% %The relevant quantity of interest is whether the use of the urgency authority affects bill passage (success, speed, amendments, and so forth) compared to the same bill with no urgency attached. The fundamental problem of causal inference is immediately evident. The executive presumably targets bills for urgency strategically, so that the selection mechanism cannot be assumed random. If, for example, more complex and divisive legislation takes longer, is likelier to fail and likelier to be tagged urgent, separating effects requires more subtle methods than used up to now.
+
+
+
+
+% federalist 70
+% Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive.
+It is here too that they may be most pernicious.
+
+
+When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
+
 \section{El proceso de las indicaciones}
 
 Para estilizar la secuencia de votación e indicación de un proyecto, consideramos un ejemplo simple. Se introduce un proyecto que contiene tres artículos. 
